[package]
name = "nmp-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Opt-in counters for evidence binaries. Kept out of production builds so the
# query hot path pays no atomic-increment cost merely to support benchmarks.
bench-instrumentation = ["dep:fjall"]

[[example]]
name = "scale_bench"
required-features = ["bench-instrumentation"]

[[example]]
name = "store_decomposition"
required-features = ["bench-instrumentation"]

[[example]]
name = "redb_index_layout"
required-features = ["bench-instrumentation"]

[[example]]
name = "packed_postings"
required-features = ["bench-instrumentation"]

[[example]]
name = "cardinality_query_bench"
required-features = ["bench-instrumentation"]

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
# M3 §3.1: the persistent backend (`RedbStore`) lives here, behind the same
# `EventStore` trait `MemoryStore` already implements. Pure-Rust embedded
# ACID key-value store — no C toolchain/`build.rs`, no wasm landmine. A1
# lands `RedbStore`.
redb = "4.1"
fjall = { version = "=3.1.6", optional = true }
# `RedbStore` canonical event rows use a versioned portable binary envelope
# for borrowed query filtering. Outbox/coverage control records remain typed
# serde JSON where they are not event-query hot-path values.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[dev-dependencies]
libc = "0.2"
tempfile = "3"
wait-timeout = "0.2"
