[package]
name = "nmp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
bench-instrumentation = []

[dependencies]
blake3.workspace = true
nostr.workspace = true
nmp-grammar.workspace = true
# HARVEST target (M3 plan §4 "Transport pool"): the old repo's `mio`-driven
# worker-thread pool, kept as the interior async edge so the app never sees
# an imposed runtime (§2). Versions mirror the old repo's pinned stack.
mio = { version = "1", features = ["os-ext", "os-poll"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tungstenite = { version = "0.29", default-features = false, features = [
    "handshake",
    "rustls-tls-webpki-roots",
] }
[dev-dependencies]
nmp-test-support.workspace = true
# In-process test relay (test 7 / the MockRelay round-trip): connect, REQ,
# receive EVENT+EOSE, CLOSE, disconnect+reconnect+replay. Async under the
# hood (nostr-sdk); confined to dev-dependencies and `#[tokio::test]` — the
# production `Pool` above stays free of any imposed runtime (D8).
nostr-relay-builder = "0.45.0-alpha.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
